@@ -1027,6 +1027,21 @@ class CHttpRequest extends CApplicationComponent
 		return empty($preferredAcceptTypes) ? false : $preferredAcceptTypes[0];
 	}
 
+    /**
+     * String compare function used by usort.
+     * Included to circumvent the use of closures (not supported by PHP 5.2) and create_function (deprecated since PHP 7.2.0)
+     * @param array $a
+     * @param array $b
+     * @return int -1 (a>b), 0 (a==b), 1 (a<b)
+     */
+    private function stringCompare($a, $b)
+    {
+        if ($a[0] == $b[0]) {
+            return 0;
+        }
+        return ($a[0] < $b[0]) ? 1 : -1;
+    }
+
 	/**
 	 * Returns an array of user accepted languages in order of preference.
 	 * The returned language IDs will NOT be canonicalized using {@link CLocale::getCanonicalID}.
@@ -1051,7 +1066,7 @@ class CHttpRequest extends CApplicationComponent
 						$languages[]=array((float)$q,$matches[1][$i]);
 				}
 
-				usort($languages,create_function('$a,$b','if($a[0]==$b[0]) {return 0;} return ($a[0]<$b[0]) ? 1 : -1;'));
+				usort($languages, array($this, 'stringCompare'));
 				foreach($languages as $language)
 					$sortedLanguages[]=$language[1];
 			}
