@@ -4,6 +4,7 @@
 Version 1.1.21 under development
 --------------------------------
 
+- Bug #4220: Fixed PHP 7.2 incompatibility caused by the use of `create_function` in CHttpRequest (martinpetrasch)
 
 Version 1.1.20 July 6, 2018
 ---------------------------
